2010-07-19  Per Bothner  <per@bothner.com>

	* webtest/info/+default+ (show): Remove unused macro.

2010-07-08  Per Bothner  <per@bothner.com>

	* webtest/date.scm: New simple text/plain example.
	* webtest/hello.scm: New simple text/html example.
	* webtest/info/+default+: Various minor fixes and re-factoring.

2010-07-07  Per Bothner  <per@bothner.com>

	* HelloCgiS.scm: Importing 'http is no longer needed.
	* webtest/info/+default+: Likewise for 'http or 'servlet.
	Also fix typo.

2010-07-01  Per Bothner  <per@bothner.com>

	* HelloCgiS.scm: Use XML literals.  Need explicit contnet-type.
	Add coment literal.
	* HelloCgiS.expected: Update accordingly.
	* HelloCgiX.xql: Need to specify content-type response-header.

2010-06-27  Per Bothner  <per@bothner.com>

	* webtest, webtest/info: new sub-directories.
	* webtest/info/+default+: New test file for http server.
	* Makefile.am (check-server): New rule.

2010-06-18  Per Bothner  <per@bothner.com>

	* lib-test.scm: Add some tests for compound symbols.

	* misc-test.scm: Add test for R6RS inline-hex-escape in symbol.

2010-05-24  Per Bothner  <per@bothner.com>

	* misc-test.scm: Add some tests of XML literal syntax.

2010-04-18  Per Bothner  <per@bothner.com>

	* HelloCgiK.expected: Update.
	* HelloCgiS.expected: Update.
	* HelloCgiK.expected: Update.

2010-04-10  Per Bothner  <per@bothner.com>

	* Makefile.am: Fix some distclean errors.

2010-03-23  Per Bothner  <per@bothner.com>

	* fannkuch.scm (vector-copy): Remove.  Pre-allocate vector into
	caller (fannkuch function), and inline initialization into count-flips.
	* Makefile.am (inlining.log): Update accordingly.
	* inlining.expected: Likewise.

2010-02-24  Per Bothner  <per@bothner.com>
            Helmut Eller  <eller.helmut@gmail.com>

	* misc-test.scm: New test, based on Savannah bug #28926
	"EOL conversion in READ".

	* misc-test.scm: New test, based on Savannah bug #28957
	"exception in inliner".

2010-02-23  Per Bothner  <per@bothner.com>