@@ -1,5 +1,9 @@
 2010-07-19  Per Bothner  <per@bothner.com>
 
+	* webtest/adder.scm: New web page script example.
+
+2010-07-19  Per Bothner  <per@bothner.com>
+
 	* webtest/info/+default+ (show): Remove unused macro.
 
 2010-07-08  Per Bothner  <per@bothner.com>
